--- a/Timed_Fly/bin/languages/lang_hu.yml
+++ b/Timed_Fly/bin/languages/lang_hu.yml
@@ -3,31 +3,14 @@
 
 # Ez az, amikor a játékosnak a választott ideje marad, mond valamit
 Announcer:
-  Sound: ENTITY_EXPERIENCE_ORB_PICKUP
   Chat:
-    Enabled: false
     Message: '&aA repülés mód le lesz tiltva &7%time% múlva.'
   Titles:
-    Enabled: true
     Title: '&c%time%'
     SubTitle: '&fAmíg a repülést letiltja'
-  Times:
-  - '120'
-  - '60'
-  - '10'
-  - '5'
-  - '4'
-  - '3'
-  - '2'
-  - '1'
-  - '0'
 
 # Ez az, amikor a játékos repül vagy repülési mód engedélyezve/letiltva
 Fly:
-  DisabledSound: ENTITY_WITHER_DEATH
-  JoinFlying:
-    Enabled: true
-    Height: 2
   Message:
     ToPlayer: '&aRepülés mód engedélyezve &7%target% &7%time% &apercre.'
     FromPlayer: '&aRepülés mód engedélyezve van &7%player%&a-nak/-nek &7%time% &apercre.'
@@ -36,11 +19,14 @@ Fly:
       ára &7$%price%.'
     Disabled: '&aRepülés mód letiltva. Vásárolj egyet.'
     NoMoney: '&aNincs elegendő pénzed a vásárláshoz.'
+    NoLevels: '&aYou don''t have enough &eLevels &ato buy this. You need &e%levels_needed%'
     SetOn: '&aRepülés mód engedélyezve.'
     SetOff: '&aRepülés mód letiltva.'
     TimeLeft: '&aVan %timeleft% idő maradt.'
   ActionBar:
     Enabled: true
+    Message: '&cVan %timeleft% a repülési idő'
+  BossBar:
     Message: '&cVan %timeleft% a repülési idő'
   Titles:
     Enabled:
@@ -88,3 +74,4 @@ Other:
   MaxReached: '&eYou have reached the maximum limit of your flight time allowed.'
   MaxAllowed: '&eYou can''t choose more than your max time allowed (&c%time_allowed%&7).'
   OnCooldown: '&7You can''t use this for %cooldown%'
+  NoCurrencyFound: '&7Could not find a currency to perform this action. If you are the server admin please enable one in the configuration file.'
