--- a/Timed_Fly/src/languages/lang_sp.yml
+++ b/Timed_Fly/src/languages/lang_sp.yml
@@ -20,6 +20,11 @@ Fly:
     SetOn: '&aModo vuelo activado.'
     SetOff: '&aModo vuelo desactivado.'
     TimeLeft: '&aTe quedan %timeleft% restantes.'
+    StopAndResume:
+      Stop: '&7Has &cParado &7el tiempo de tu vuelo!'
+      Resume: '&7Has &aResumido &7el tiempo de tu vuelo!'
+      NoTime: '&7No tienes tiempo restante para hacer esto!'
+      Already: '&7Ya has hecho esta accion!'
   ActionBar:
     Enabled: true
     Message: '&aTe quedan %timeleft% restantes.'
