Update lang_hu.yml file to the latest version

--- a/Timed_Fly/src/languages/lang_hu.yml
+++ b/Timed_Fly/src/languages/lang_hu.yml
@@ -19,15 +19,15 @@ Fly:
       ára &7$%price%.'
     Disabled: '&aRepülés mód letiltva. Vásárolj egyet.'
     NoMoney: '&aNincs elegendő pénzed a vásárláshoz.'
-    NoLevels: '&aYou don''t have enough &eLevels &ato buy this. You need &e%levels_needed%'
+    NoLevels: '&aNincs elég &eLevels &aa vásárláshoz. Neked kell &e%levels_needed%'
     SetOn: '&aRepülés mód engedélyezve.'
     SetOff: '&aRepülés mód letiltva.'
     TimeLeft: '&aVan %timeleft% idő maradt.'
     StopAndResume:
-      Stop: '&7Megállította a repülési időt!'
-      Resume: '&7Ön folytatta a repülési időt!'
-      NoTime: '&7Nincs ideje rá!'
-      Already: '&7Már megtette ezt!'
+      Stop: '&7Megállítva a repülési idő!'
+      Resume: '&7Folytattad a repülési időt!'
+      NoTime: '&7Nincs időd rá!'
+      Already: '&7Már megtetted ezt!'
   ActionBar:
     Enabled: true
     Message: '&cVan %timeleft% a repülési idő'
@@ -76,7 +76,7 @@ Other:
     Found: '&eBeállítottad az pénzt &7%itemid% &7$%price%.'
     NotFound: '&eNem találtam a tárgy ID-t &7%itemid%. Használd /tf list az összes tárgy megtekintéséhez.'
   DisabledWorld: '&eEz a világ nem engedélyezett. Ha úgy gondolod, hogy ez hiba, akkor jelentsd be a rendszergazdának.'
-  MaxReached: '&eYou have reached the maximum limit of your flight time allowed.'
-  MaxAllowed: '&eYou can''t choose more than your max time allowed (&c%time_allowed%&7).'
-  OnCooldown: '&7You can''t use this for %cooldown%'
-  NoCurrencyFound: '&7Could not find a currency to perform this action. If you are the server admin please enable one in the configuration file.'
+  MaxReached: '&eElérted a megengedett maximális repülési időt.'
+  MaxAllowed: '&eNem választhatsz többet, mint a megengedett maximális időt (&c%time_allowed%&7).'
+  OnCooldown: '&7Nem használhatod ezt% cooldown%'
+  NoCurrencyFound: '&7Nem sikerült megtalálni a pénznemet a művelet végrehajtásához. Ha a szerver adminisztrátora vagy, kérjük engedélyezd az egyiket a konfigurációs fájlban.'
