Update lang_hu.yml file to the latest version

--- a/src/languages/lang_hu.yml
+++ b/src/languages/lang_hu.yml
@@ -9,30 +9,28 @@ Announcer:
     Title: '&c%time%'
     SubTitle: '&fAmíg a repülést letiltja'
 
-# Ez az, amikor a játékos repül vagy repülési mód engedélyezve/letiltva
+# Ez az, amikor a játékos repül vagy a repülési mód engedélyezve/letiltva
 Fly:
   Message:
     ToPlayer: '&aRepülés mód engedélyezve &7%target% &7%time% &apercre.'
     FromPlayer: '&aRepülés mód engedélyezve van &7%player%&a-nak/-nek &7%time% &apercre.'
     AddTime: '&aHozzáadtad &7%time% &apercet &7%player%&a játékoshoz'
-    AddTimeToPlayer: '&aYou have been added &7%time% &aminutes to your flight time.'
-    Enabled: '&aHozzáadtál &7%time% &apercet a repülési időhöz
-      ára &7$%price%.'
-    Disabled: '&aRepülés mód letiltva. Vásárolj egyet.'
+    Enabled: '&aHozzáadtál &7%time% &apercet a repülési időhöz, ára &7$%price%.'
+    Disabled: '&aA repülés mód letiltva. Vásárolj egyet.'
     NoMoney: '&aNincs elegendő pénzed a vásárláshoz.'
-    NoExp: '&aYou don''t have enough &eExp &ato buy this. You need &e%exp_needed%'
-    NoLevels: '&aYou don''t have enough &eLevels &ato buy this. You need &e%levels_needed%'
-    SetOn: '&aRepülés mód engedélyezve.'
-    SetOff: '&aRepülés mód letiltva.'
-    TimeLeft: '&aVan &7%timeleft% &aidő maradt.'
+    NoLevels: '&aNincs elég &eSzinted &aa megvásárláshoz. Szükséges &e%levels_needed%'
+    NoExp: '&aNincs elég &eExp &aa megvásárláshoz. Szükséges &e%exp_needed%'
+    SetOn: '&aA repülés mód engedélyezve.'
+    SetOff: '&aA repülés mód letiltva.'
+    TimeLeft: '&aVan %timeleft% idő maradt.'
     OthersTimeLeft: '&a%player% has &7%timeleft% &atime left.'
     StopAndResume:
-      Stop: '&7Megállította a repülési időt!'
-      Resume: '&7Ön folytatta a repülési időt!'
-      NoTime: '&7Nincs ideje rá!'
-      Already: '&7Már megtette ezt!'
-  ActionBar: '&cVan %timeleft% a repülési idő'
-  BossBar: '&cVan %timeleft% a repülési idő'
+      Stop: '&7Megállítva a repülési idő!'
+      Resume: '&7Folytattad a repülési időt!'
+      NoTime: '&7Nincs időd rá!'
+      Already: '&7Már megtetted ezt!'
+    ActionBar: '&cVan %timeleft% a repülési idő'
+    BossBar: '&cVan %timeleft% a repülési idő'
   Titles:
     Enabled:
       Title: '&cHozzáadtál'
@@ -71,12 +69,12 @@ Other:
     NotFound: '&eNem találtam a tárgy ID-t &7%itemid%. Használd /tf list az összes tárgy megtekintéséhez.'
   SetPrice:
     Usage: '&eHasználat: &7/tf setPrice <tárgyID> <ár>'
-    Found: '&eBeállítottad az pénzt &7%itemid% &7$%price%.'
+    Found: '&eBeállítottad az árat a(z) &7%itemid%&e-ra/-re &7$%price%&e árért.'
     NotFound: '&eNem találtam a tárgy ID-t &7%itemid%. Használd /tf list az összes tárgy megtekintéséhez.'
   DisabledWorld: '&eEz a világ nem engedélyezett. Ha úgy gondolod, hogy ez hiba, akkor jelentsd be a rendszergazdának.'
-  MaxReached: '&eYou have reached the maximum limit of your flight time allowed.'
-  MaxAllowed: '&eYou can''t choose more than your max time allowed (&c%time_allowed%&7).'
-  OnCooldown: '&7You can''t use this for %cooldown%'
-  NoCurrencyFound: '&7Could not find a currency to perform this action. If you are the server admin please enable one in the configuration file.'
-  PlayerNotFound: '&7Could not find that player... Make sure the player is online.'
-  OnCombat: '&aYou have entered in combat. Disabling flight.'
+  MaxReached: '&eElérted a megengedett maximális repülési időt.'
+  MaxAllowed: '&eNem választhatsz többet, mint a megengedett maximális időt (&c%time_allowed%&7).'
+  OnCooldown: '&7Nem használhatod ezt% cooldown%'
+  NoCurrencyFound: '&7Nem sikerült megtalálni a pénznemet a művelet végrehajtásához. Ha a szerver adminisztrátora vagy, kérjük engedélyezd az egyiket a konfigurációs fájlban.'
+  PlayerNotFound: '&7Nem sikerült megtalálni a játékost... Győződj meg róla, hogy a játékos online.'
+  OnCombat: '&aBeléptél a harcba. Repülés letiltva.'
