--- a/src/languages/lang_hu.yml
+++ b/src/languages/lang_hu.yml
@@ -56,6 +56,13 @@ Format:
 
 # Ez néhány egyéb üzenet
 Other:
+  Refund:
+    TimeLimit: '&7You have reached the time limit to be able to refund this. Limit is &a%refund_limit%'
+    MaxRefunds: '&7You have reached the max refunds today. Try again in &a%refund_cooldown%'
+    NotValid: '&7There was an error while trying to refund.'
+    Refunded: '&7You have been refunded &a%refund_amount%.'
+    Disabled: '&7Refunds are disabled.'
+  Fixed: '&7Your flight has been fixed.'
   NoPermission:
     Message: '&cNincs jogod ehhez a parancshoz'
     Title: '&cNincs jogod'
