--- a/src/languages/lang_sp.yml
+++ b/src/languages/lang_sp.yml
@@ -54,6 +54,13 @@ Format:
 
 # Estos son otros mensajes
 Other:
+  Refund:
+    TimeLimit: '&7You have reached the time limit to be able to refund this. Limit is &a%refund_limit%'
+    MaxRefunds: '&7You have reached the max refunds today. Try again in &a%refund_cooldown%'
+    NotValid: '&7There was an error while trying to refund.'
+    Refunded: '&7You have been refunded &a%refund_amount%.'
+    Disabled: '&7Refunds are disabled.'
+  Fixed: '&7Your flight has been fixed.'
   NoPermission:
     Message: '&cNo tienes permiso para usar este comando, creo que no eres Admin.'
     Title: '&cSin permisos'
